--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -14,6 +14,7 @@ properties:
   - name: filename
     type: std::string
     init_with: '"filename-not-set.tmj"'
+    constructor_arg: true
 
 
 functions:
