* Load file into nlohmann::json structure

--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -24,6 +24,12 @@ functions:
     type: Tileo::Mesh*
     guards: [ bitmap_bin, tile_atlas ]
     body: |
+      // 1
+      // load and validate the json data to variables
+      std::ifstream i(filename);
+      nlohmann::json j;
+      i >> j;
+
       // get height
       // get width
       // get first j["layers"] that is a ["type"] == "tilelayer"
@@ -36,6 +42,7 @@ functions:
       // get tileheight
       // validate tileheight and tilewidth == 16
 
+      // 2
       // create the atlas
       int tile_width = 16;
       int tile_height = 16;
@@ -58,21 +65,29 @@ functions:
          tile_atlas->duplicate_bitmap_and_load(tile_map_bitmap, tile_width, tile_height);
       }
 
+      // 3
       // create the mesh
       int width = 0;
       int height = 0;
       Tileo::Mesh* mesh = new Tileo::Mesh(tile_atlas, width, height, tile_width, tile_height);
       mesh->initialize();
 
+      // 4
       // return the mesh
       return mesh;
     body_dependency_symbols:
       - Tileo::TileAtlasBuilder
+      - nlohmann::json
+      - ifstream
 
 
 dependencies:
 
 
+  - symbol: ifstream
+    headers: [ fstream ]
+  - symbol: nlohmann::json
+    headers: [ lib/nlohmann/json.hpp ]
   - symbol: AllegroFlare::BitmapBin*
     headers: [ AllegroFlare/BitmapBin.hpp ]
   - symbol: Tileo::Atlas*
