* Get working tile map mesh loading (needs larger final tile size tho)

--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -109,7 +109,7 @@ functions:
          for (int x=0; x<width; x++)
          {
             int tile_id = tiles[y * width + x];
-            mesh->set_tile_id(x, y, tile_id);
+            mesh->set_tile_id(x, y, tile_id-1);
          }
       }
 
