--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -16,6 +16,11 @@ properties:
     init_with: '"filename-not-set.tmj"'
     constructor_arg: true
 
+  - name: bitmap_atlas_filename
+    type: std::string
+    init_with: '"tiles_dungeon_v1.1.png"'
+    constructor_arg: true
+
 
 functions:
 
@@ -77,9 +82,8 @@ functions:
       int tile_width = 16;
       int tile_height = 16;
 
-      std::string bitmap_filename = "tiles_dungeon_v1.1.png";
-      ALLEGRO_BITMAP *tile_map_bitmap = bitmap_bin->operator[](bitmap_filename);
-      tile_atlas->set_bitmap_filename(bitmap_filename);
+      ALLEGRO_BITMAP *tile_map_bitmap = bitmap_bin->operator[](bitmap_atlas_filename);
+      tile_atlas->set_bitmap_filename(bitmap_atlas_filename);
 
       bool scaled_and_extruded = true;
       if (scaled_and_extruded)
