--- a/quintessence/Tileo/TMJDataLoader.q.yml
+++ b/quintessence/Tileo/TMJDataLoader.q.yml
@@ -9,22 +9,18 @@ properties:
   - name: num_columns
     type: int
     init_with: 0
-    getter: true
 
   - name: num_rows
     type: int
     init_with: 0
-    getter: true
 
-  - name: tmx_tilewidth
+  - name: tile_width
     type: int
     init_with: 0
-    getter: true
 
-  - name: tmx_tileheight
+  - name: tile_height
     type: int
     init_with: 0
-    getter: true
 
   - name: layer_num_columns
     type: int
@@ -36,7 +32,7 @@ properties:
     init_with: 0
     getter: true
 
-  - name: tiles
+  - name: layer_tile_data
     type: std::vector<int>
     init_with: '{}'
     getter: true
@@ -48,6 +44,30 @@ properties:
 
 
 functions:
+
+
+  - name: get_num_columns
+    type: int
+    guards: [ loaded ]
+    body: return num_columns;
+
+
+  - name: get_num_rows
+    type: int
+    guards: [ loaded ]
+    body: return num_rows;
+
+
+  - name: get_tile_width
+    type: int
+    guards: [ loaded ]
+    body: return tile_width;
+
+
+  - name: get_tile_height
+    type: int
+    guards: [ loaded ]
+    body: return tile_height;
 
 
   - name: load
@@ -81,8 +101,8 @@ functions:
 
       num_columns = j["width"]; // get width
       num_rows = j["height"]; // get height
-      tmx_tilewidth = j["tilewidth"]; // get width
-      tmx_tileheight = j["tileheight"]; // get height
+      tile_width = j["tilewidth"]; // get width
+      tile_height = j["tileheight"]; // get height
 
       // get first j["layers"] that is a ["type"] == "tilelayer"
       bool tilelayer_type_found = false;
@@ -100,7 +120,7 @@ functions:
       
       layer_num_columns = tilelayer["width"];
       layer_num_rows = tilelayer["height"];
-      tiles = tilelayer["data"].get<std::vector<int>>();
+      layer_tile_data = tilelayer["data"].get<std::vector<int>>();
 
       loaded = true;
 
