--- a/quintessence/Tileo/TMJDataLoader.q.yml
+++ b/quintessence/Tileo/TMJDataLoader.q.yml
@@ -9,33 +9,37 @@ properties:
   - name: num_columns
     type: int
     init_with: 0
+    getter: explicit
 
   - name: num_rows
     type: int
     init_with: 0
+    getter: explicit
 
   - name: tile_width
     type: int
     init_with: 0
+    getter: explicit
 
   - name: tile_height
     type: int
     init_with: 0
+    getter: explicit
 
   - name: layer_num_columns
     type: int
     init_with: 0
-    getter: true
+    getter: explicit
 
   - name: layer_num_rows
     type: int
     init_with: 0
-    getter: true
+    getter: explicit
 
   - name: layer_tile_data
     type: std::vector<int>
     init_with: '{}'
-    getter: true
+    getter: explicit
 
   - name: loaded
     type: bool
@@ -68,6 +72,24 @@ functions:
     type: int
     guards: [ loaded ]
     body: return tile_height;
+
+
+  - name: get_layer_num_columns
+    type: int
+    guards: [ loaded ]
+    body: return layer_num_columns;
+
+
+  - name: get_layer_num_rows
+    type: int
+    guards: [ loaded ]
+    body: return layer_num_rows;
+
+
+  - name: get_layer_tile_data
+    type: std::vector<int>
+    guards: [ loaded ]
+    body: return layer_tile_data;
 
 
   - name: load
