--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -21,13 +21,39 @@ properties:
     init_with: '"tiles_dungeon_v1.1.png"'
     constructor_arg: true
 
+  - name: mesh
+    type: Tileo::Mesh*
+    init_with: nullptr
+    getter: explicit
+
+  - name: collision_tile_map
+    type: Tileo::TileMap*
+    init_with: nullptr
+    getter: explicit
+
+  - name: loaded
+    type: bool
+    init_with: false
+
 
 functions:
 
 
-  - name: create_mesh
+  - name: get_mesh
     type: Tileo::Mesh*
-    guards: [ bitmap_bin, tile_atlas ]
+    guards: [ loaded ]
+    body: return mesh;
+
+
+  - name: get_collision_tile_map
+    type: Tileo::TileMap*
+    guards: [ loaded ]
+    body: return collision_tile_map;
+
+
+  - name: load
+    type: bool
+    guards: [ bitmap_bin, tile_atlas, (!loaded) ]
     body: |
       // 1
       // load and validate the json data to variables
@@ -76,7 +102,8 @@ functions:
          throw std::runtime_error("TMJMeshLoader: error: num tiles (in \"data\" field) does not match width*height.");
       }
 
-      // 2
+
+      // ##
       // create the atlas
       int tile_width = 16;
       int tile_height = 16;
@@ -98,27 +125,52 @@ functions:
          tile_atlas->duplicate_bitmap_and_load(tile_map_bitmap, tile_width, tile_height);
       }
 
-      // 3
+
+      // ##
       // create the mesh
       int num_columns = tmx_width;
       int num_rows = tmx_height;
-      Tileo::Mesh* mesh = new Tileo::Mesh(tile_atlas, num_columns, num_rows, tile_width, tile_height);
-      mesh->initialize();
+      Tileo::Mesh* created_mesh = new Tileo::Mesh(tile_atlas, num_columns, num_rows, tile_width, tile_height);
+      created_mesh->initialize();
 
-      // 4
-      // fill the data
+
+      // ##
+      // fill the data on the mesh
       for (int y=0; y<num_rows; y++)
       {
          for (int x=0; x<num_columns; x++)
          {
             int tile_id = tiles[y * num_columns + x];
-            mesh->set_tile_id(x, y, tile_id-1);
+            created_mesh->set_tile_id(x, y, tile_id-1);
          }
       }
 
-      // 5
-      // return the mesh
-      return mesh;
+
+      // ##
+      // create the collision tile map
+      Tileo::TileMap* created_collision_tile_map = new Tileo::TileMap(num_columns, num_rows);
+      created_collision_tile_map->initialize();
+
+
+      // ##
+      // fill the data on the collision tile map
+      for (int y=0; y<num_rows; y++)
+      {
+         for (int x=0; x<num_columns; x++)
+         {
+            // TODO
+            //int tile_id = tiles[y * num_columns + x];
+            //created_mesh->set_tile_id(x, y, tile_id-1);
+         }
+      }
+
+      // ##
+      // assign the created objects to the class
+      this->mesh = created_mesh;
+      this->collision_tile_map = created_collision_tile_map;
+      loaded = true;
+
+      return true;
     body_dependency_symbols:
       - Tileo::TileAtlasBuilder
       - nlohmann::json
@@ -138,6 +190,8 @@ dependencies:
     headers: [ Tileo/Atlas.hpp ]
   - symbol: Tileo::Mesh*
     headers: [ Tileo/Mesh.hpp ]
+  - symbol: Tileo::TileMap*
+    headers: [ Tileo/TileMap.hpp ]
   - symbol: Tileo::TileAtlasBuilder
     headers: [ Tileo/TileAtlasBuilder.hpp ]
 
