--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -57,14 +57,21 @@ functions:
     body: |
       // 1
       // load and validate the json data to variables
+      // TODO: replace this with the TMJDataLoader
+
+
+      Tileo::TMJDataLoader tmj_data_loader(filename);
+      tmj_data_loader.load();
+
+
       std::ifstream i(filename);
       nlohmann::json j;
       i >> j;
 
-      int tmx_height = j["height"];// get height
-      int tmx_width = j["width"];// get width
-      int tmx_tileheight = j["tileheight"]; // get height
-      int tmx_tilewidth = j["tilewidth"]; // get width
+      int tmx_height = tmj_data_loader.get_num_rows(); //j["height"];// get height
+      int tmx_width = tmj_data_loader.get_num_columns(); //j["width"];// get width
+      int tmx_tileheight = tmj_data_loader.get_tile_height(); //j["tileheight"]; // get height
+      int tmx_tilewidth = tmj_data_loader.get_tile_width(); //j["tilewidth"]; // get width
 
       // get first j["layers"] that is a ["type"] == "tilelayer"
       bool tilelayer_type_found = false;
@@ -80,9 +87,15 @@ functions:
       }
       if (!tilelayer_type_found) throw std::runtime_error("TMJMeshLoader: error: tilelayer type not found.");
       
-      int tilelayer_width = tilelayer["width"];
-      int tilelayer_height = tilelayer["height"];
-      std::vector<int> tiles = tilelayer["data"].get<std::vector<int>>();
+      int tilelayer_width = tmj_data_loader.get_layer_num_columns(); //tilelayer["width"];
+      int tilelayer_height = tmj_data_loader.get_layer_num_rows(); //tilelayer["height"];
+      std::vector<int> tiles = tmj_data_loader.get_layer_tile_data(); //tilelayer["data"].get<std::vector<int>>();
+
+      int collision_layer_num_columns = tmj_data_loader.get_collision_layer_num_columns();
+      int collision_layer_num_rows = tmj_data_loader.get_collision_layer_num_rows();
+      std::vector<int> collision_layer_tiles = tmj_data_loader.get_collision_layer_tile_data();
+
+
 
       // validate widths and heights match
       if (tilelayer_width != tmx_width)
@@ -100,6 +113,20 @@ functions:
       if (tiles.size() != tmx_width * tmx_height)
       {
          throw std::runtime_error("TMJMeshLoader: error: num tiles (in \"data\" field) does not match width*height.");
+      }
+      if (tilelayer_width != collision_layer_num_columns)
+      {
+         // TODO: validate collision mesh dimentions, tile_width, and tile_height match the other values
+      }
+      if (tilelayer_height != collision_layer_num_rows)
+      {
+         // TODO: validate collision mesh dimentions, tile_width, and tile_height match the other values
+      }
+      if (collision_layer_tiles.size() != tmx_width * tmx_height)
+      {
+         // TODO: add test for this
+         throw std::runtime_error("TMJMeshLoader: error: num tiles (in \"data\" field) for collision_layer "
+                                  "does not match width*height.");
       }
 
 
@@ -148,7 +175,9 @@ functions:
 
       // ##
       // create the collision tile map
-      Tileo::TileMap* created_collision_tile_map = new Tileo::TileMap(num_columns, num_rows);
+      Tileo::TileMap* created_collision_tile_map = new Tileo::TileMap(
+         collision_layer_num_columns,
+         collision_layer_num_rows);
       created_collision_tile_map->initialize();
 
 
@@ -159,8 +188,8 @@ functions:
          for (int x=0; x<num_columns; x++)
          {
             // TODO
-            //int tile_id = tiles[y * num_columns + x];
-            //created_mesh->set_tile_id(x, y, tile_id-1);
+            int tile_id = collision_layer_tiles[y * num_columns + x];
+            created_collision_tile_map->set_tile(x, y, tile_id);
          }
       }
 
@@ -172,6 +201,7 @@ functions:
 
       return true;
     body_dependency_symbols:
+      - Tileo::TMJDataLoader
       - Tileo::TileAtlasBuilder
       - nlohmann::json
       - ifstream
@@ -194,5 +224,7 @@ dependencies:
     headers: [ Tileo/TileMap.hpp ]
   - symbol: Tileo::TileAtlasBuilder
     headers: [ Tileo/TileAtlasBuilder.hpp ]
+  - symbol: Tileo::TMJDataLoader
+    headers: [ Tileo/TMJDataLoader.hpp ]
 
 
