--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -64,6 +64,7 @@ functions:
       tmj_data_loader.load();
 
 
+      // TODO: remove dead code for manual loading (now using only the tmj_data_loader data yay!)
       std::ifstream i(filename);
       nlohmann::json j;
       i >> j;
