--- a/quintessence/Tileo/TMJMeshLoader.q.yml
+++ b/quintessence/Tileo/TMJMeshLoader.q.yml
@@ -1,25 +1,26 @@
 properties:
 
 
+  - name: BITMAP_ATLAS_FILENAME
+    static: true
+    type: std::string
+    const: true
+    init_with: '"tiles_dungeon_v1.1.png"'
+
   - name: bitmap_bin
     type: AllegroFlare::BitmapBin*
     init_with: nullptr
     constructor_arg: true
 
-  - name: tile_atlas
-    type: Tileo::Atlas*
-    init_with: nullptr
-    constructor_arg: true
-
-  - name: filename
+  - name: tmj_filename
     type: std::string
     init_with: '"filename-not-set.tmj"'
     constructor_arg: true
 
-  - name: bitmap_atlas_filename
-    type: std::string
-    init_with: '"tiles_dungeon_v1.1.png"'
-    constructor_arg: true
+  - name: tile_atlas
+    type: Tileo::Atlas*
+    init_with: nullptr
+    getter: explicit
 
   - name: mesh
     type: Tileo::Mesh*
@@ -39,6 +40,12 @@ properties:
 functions:
 
 
+  - name: get_tile_atlas
+    type: Tileo::Atlas*
+    guards: [ loaded ]
+    body: return tile_atlas;
+
+
   - name: get_mesh
     type: Tileo::Mesh*
     guards: [ loaded ]
@@ -53,40 +60,39 @@ functions:
 
   - name: load
     type: bool
-    guards: [ bitmap_bin, tile_atlas, (!loaded) ]
+    guards: [ bitmap_bin, (!loaded) ]
     body: |
       // 1
       // load and validate the json data to variables
       // TODO: replace this with the TMJDataLoader
 
-
-      Tileo::TMJDataLoader tmj_data_loader(filename);
+      Tileo::TMJDataLoader tmj_data_loader(tmj_filename);
       tmj_data_loader.load();
 
 
-      // TODO: remove dead code for manual loading (now using only the tmj_data_loader data yay!)
-      std::ifstream i(filename);
-      nlohmann::json j;
-      i >> j;
+      //// TODO: remove dead code for manual loading (now using only the tmj_data_loader data yay!)
+      //std::ifstream i(tmj_filename);
+      //nlohmann::json j;
+      //i >> j;
 
       int tmx_height = tmj_data_loader.get_num_rows(); //j["height"];// get height
       int tmx_width = tmj_data_loader.get_num_columns(); //j["width"];// get width
       int tmx_tileheight = tmj_data_loader.get_tile_height(); //j["tileheight"]; // get height
       int tmx_tilewidth = tmj_data_loader.get_tile_width(); //j["tilewidth"]; // get width
 
-      // get first j["layers"] that is a ["type"] == "tilelayer"
-      bool tilelayer_type_found = false;
-      nlohmann::json tilelayer;
-      for (auto &layer : j["layers"].items())
-      {
-         if (layer.value()["type"] == "tilelayer")
-         {
-            tilelayer = layer.value();
-            tilelayer_type_found = true;
-            break;
-         }
-      }
-      if (!tilelayer_type_found) throw std::runtime_error("TMJMeshLoader: error: tilelayer type not found.");
+      //// get first j["layers"] that is a ["type"] == "tilelayer"
+      //bool tilelayer_type_found = false;
+      //nlohmann::json tilelayer;
+      //for (auto &layer : j["layers"].items())
+      //{
+         //if (layer.value()["type"] == "tilelayer")
+         //{
+            //tilelayer = layer.value();
+            //tilelayer_type_found = true;
+            //break;
+         //}
+      //{}
+      //if (!tilelayer_type_found) throw std::runtime_error("TMJMeshLoader: error: tilelayer type not found.");
       
       int tilelayer_width = tmj_data_loader.get_layer_num_columns(); //tilelayer["width"];
       int tilelayer_height = tmj_data_loader.get_layer_num_rows(); //tilelayer["height"];
@@ -136,8 +142,9 @@ functions:
       int tile_width = 16;
       int tile_height = 16;
 
-      ALLEGRO_BITMAP *tile_map_bitmap = bitmap_bin->operator[](bitmap_atlas_filename);
-      tile_atlas->set_bitmap_filename(bitmap_atlas_filename);
+      Tileo::Atlas *created_tile_atlas = new Tileo::Atlas;
+      ALLEGRO_BITMAP *tile_map_bitmap = bitmap_bin->operator[](BITMAP_ATLAS_FILENAME);
+      created_tile_atlas->set_bitmap_filename(BITMAP_ATLAS_FILENAME);
 
       bool scaled_and_extruded = true;
       if (scaled_and_extruded)
@@ -145,12 +152,13 @@ functions:
          int scale = 3;
          ALLEGRO_BITMAP *scaled_extruded_tile_map_bitmap =
             TileAtlasBuilder::build_scaled_and_extruded(tile_map_bitmap, scale);
-         al_save_bitmap("/Users/markoates/Desktop/whatever.png", scaled_extruded_tile_map_bitmap);
-         tile_atlas->duplicate_bitmap_and_load(scaled_extruded_tile_map_bitmap, tile_width*scale, tile_height*scale, 1);
+         created_tile_atlas->duplicate_bitmap_and_load(
+            scaled_extruded_tile_map_bitmap, tile_width*scale, tile_height*scale, 1
+         );
       }
       else
       {
-         tile_atlas->duplicate_bitmap_and_load(tile_map_bitmap, tile_width, tile_height);
+         created_tile_atlas->duplicate_bitmap_and_load(tile_map_bitmap, tile_width, tile_height);
       }
 
 
@@ -158,7 +166,7 @@ functions:
       // create the mesh
       int num_columns = tmx_width;
       int num_rows = tmx_height;
-      Tileo::Mesh* created_mesh = new Tileo::Mesh(tile_atlas, num_columns, num_rows, tile_width, tile_height);
+      Tileo::Mesh* created_mesh = new Tileo::Mesh(created_tile_atlas, num_columns, num_rows, tile_width, tile_height);
       created_mesh->initialize();
 
 
@@ -196,6 +204,7 @@ functions:
 
       // ##
       // assign the created objects to the class
+      this->tile_atlas = created_tile_atlas;
       this->mesh = created_mesh;
       this->collision_tile_map = created_collision_tile_map;
       loaded = true;
