--- a/quintessence/Tileo/TileoTileVertexAllegroVertexDeclaration.q.yml
+++ b/quintessence/Tileo/TileoTileVertexAllegroVertexDeclaration.q.yml
@@ -78,6 +78,7 @@ functions:
          throw std::runtime_error("there was an error destroying the TileoTileVertexWithNormal declaration.");
       }
       al_destroy_vertex_decl(vertex_declaration);
+      vertex_declaration = nullptr;
       destroyed = true;
       return;
 
