--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -1,4 +1,60 @@
+properties:
+
+  - name: num_columns
+    type: int
+    init_with: 0
+    constructor_arg: true
+
+  - name: num_rows
+    type: int
+    init_with: 0
+    constructor_arg: true
+
+  - name: tile_width
+    type: float
+    init_with: 1.0f
+    constructor_arg: true
+
+  - name: tile_height
+    type: float
+    init_with: 1.0f
+    constructor_arg: true
+
+  - name: tile_ids
+    type: std::vector<int>
+    init_with: ''
+
+  - name: normal_tile_ids
+    type: std::vector<int>
+    init_with: ''
+
+  - name: initialized
+    type: bool
+    init_with: false
+
+
 functions:
-  - name: run
-    type: std::string
-    body: return "Hello World!";
+
+
+  - name: initialize
+    guards: [ (num_columns > 0), (num_rows > 0) ]
+    body: |
+      // TODO
+      initialized = true;
+      return;
+
+
+  - name: resize
+    parameters:
+      - name: num_columns
+        type: int
+        default_argument: 1
+      - name: num_rows
+        type: int
+        default_argument: 1
+    guards: [ (num_columns > 0), (num_rows > 0) ]
+    body: |
+      // TODO
+      return;
+
+
