--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -1,5 +1,10 @@
 properties:
 
+
+  - name: tileo_tile_vertex_allegro_vertex_declaration
+    type: Tileo::TileoTileVertexAllegroVertexDeclaration
+    init_with: ''
+
   - name: num_columns
     type: int
     init_with: 0
@@ -43,6 +48,10 @@ functions:
   - name: initialize
     guards: [ (num_columns > 0), (num_rows > 0) ]
     body: |
+      // you were here:
+
+      tileo_tile_vertex_allegro_vertex_declaration.initialize(); // < TODO
+
       clear_and_reserve();
       // TODO
       initialized = true;
@@ -77,6 +86,8 @@ functions:
 dependencies:
 
 
+  - symbol: Tileo::TileoTileVertexAllegroVertexDeclaration
+    headers: [ Tileo/TileoTileVertexAllegroVertexDeclaration.hpp ]
   - symbol: std::vector<TILEO_TILE_VERTEX>
     headers: [ vector, Tileo/TileoTileVertex.hpp ]
 
