--- a/quintessence/Tileo/TileoTileVertexAllegroVertexDeclaration.q.yml
+++ b/quintessence/Tileo/TileoTileVertexAllegroVertexDeclaration.q.yml
@@ -27,6 +27,20 @@ functions:
       return vertex_declaration;
 
 
+  - name: build_empty_vertex
+    static: true
+    type: TILEO_TILE_VERTEX
+    body: |
+      TILEO_TILE_VERTEX v;
+      v.x = v.y = v.z = 0;
+      v.texture_u = v.texture_v = 0;
+      v.normal_u = v.normal_v = 0;
+      v.height_u = v.height_v = 0;
+      v.height = 0;
+      v.color = ALLEGRO_COLOR{1.0f, 1.0f, 1.0f, 1.0f};
+      return v;
+
+
   - name: initialize
     guards:
       - (!initialized)
