--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -124,7 +124,7 @@ functions:
          vertexes[v].x *= tile_width;
          vertexes[v].y *= tile_height;
          vertexes[v].z = 0;
-         vertexes[v].color = al_map_rgba_f(1, 1, 1, 1);
+         vertexes[v].color = ALLEGRO_COLOR{1, 1, 1, 1};
       }
 
       return;
