--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -85,15 +85,57 @@ functions:
       return;
 
 
+  - name: set_tile_uv
+    guards: [ initialized ]
+    parameters:
+      - name: tile_x
+        type: int
+        default_argument: 0
+      - name: tile_y
+        type: int
+        default_argument: 0
+      - name: u1
+        type: float
+        default_argument: 0.0f
+      - name: v1
+        type: int
+        default_argument: 0.0f
+      - name: u2
+        type: float
+        default_argument: 0.0f
+      - name: v2
+        type: int
+        default_argument: 0.0f
+    body: |
+      int id_start = (tile_x * 6) + tile_y * (num_columns*6);
+      int &i = id_start;
+
+      vertexes[i+0].texture_u = u1;
+      vertexes[i+0].texture_v = v1;
+      vertexes[i+1].texture_u = u1;
+      vertexes[i+1].texture_v = v2;
+      vertexes[i+2].texture_u = u2;
+      vertexes[i+2].texture_v = v2;
+      vertexes[i+3].texture_u = u2;
+      vertexes[i+3].texture_v = v2;
+      vertexes[i+4].texture_u = u2;
+      vertexes[i+4].texture_v = v1;
+      vertexes[i+5].texture_u = u1;
+      vertexes[i+5].texture_v = v1;
+
+      return;
+ 
+
   - name: place_vertexes_into_tile_mesh_shape
     private: true
     body: |
+      // TODO: add test
+
       // place the vertexes to create a mesh of boxes for tiles
       int num_vertexes = num_columns*num_rows*6;
       for (int v=0; v<num_vertexes; v+=6)
       {
          long tile_num = v / 6;
-
          int x1 = (tile_num % num_columns);
          int y1 = (tile_num / num_columns);
          int x2 = x1 + 1;
@@ -101,19 +143,14 @@ functions:
 
          vertexes[v+0].x = x1;
          vertexes[v+0].y = y1;
-
          vertexes[v+1].x = x1;
          vertexes[v+1].y = y2;
-
          vertexes[v+2].x = x2;
          vertexes[v+2].y = y2;
-
          vertexes[v+3].x = x2;
          vertexes[v+3].y = y2;
-
          vertexes[v+4].x = x2;
          vertexes[v+4].y = y1;
-
          vertexes[v+5].x = x1;
          vertexes[v+5].y = y1;
       }
