--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -124,6 +124,47 @@ functions:
       vertexes[i+5].texture_v = v1;
 
       return;
+
+
+  - name: set_normal_tile_uv
+    guards: [ initialized ]
+    parameters:
+      - name: tile_x
+        type: int
+        default_argument: 0
+      - name: tile_y
+        type: int
+        default_argument: 0
+      - name: u1
+        type: float
+        default_argument: 0.0f
+      - name: v1
+        type: int
+        default_argument: 0.0f
+      - name: u2
+        type: float
+        default_argument: 0.0f
+      - name: v2
+        type: int
+        default_argument: 0.0f
+    body: |
+      int id_start = (tile_x * 6) + tile_y * (num_columns*6);
+      int &i = id_start;
+
+      vertexes[i+0].normal_u = u1;
+      vertexes[i+0].normal_v = v1;
+      vertexes[i+1].normal_u = u1;
+      vertexes[i+1].normal_v = v2;
+      vertexes[i+2].normal_u = u2;
+      vertexes[i+2].normal_v = v2;
+      vertexes[i+3].normal_u = u2;
+      vertexes[i+3].normal_v = v2;
+      vertexes[i+4].normal_u = u2;
+      vertexes[i+4].normal_v = v1;
+      vertexes[i+5].normal_u = u1;
+      vertexes[i+5].normal_v = v1;
+
+      return;
  
 
   - name: place_vertexes_into_tile_mesh_shape
