* Add #set_normal_tile#, #obtain_vertex_declaration#; Start with testing

--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -46,6 +46,7 @@ properties:
   - name: vertexes
     type: std::vector<TILEO_TILE_VERTEX>
     init_with: ''
+    getter_ref: true
 
   - name: initialized
     type: bool
@@ -74,6 +75,12 @@ functions:
       tileo_tile_vertex_allegro_vertex_declaration.destroy();
       destroyed = true;
       return;
+
+
+  - name: obtain_vertex_declaration
+    type: ALLEGRO_VERTEX_DECL*
+    body: |
+      return tileo_tile_vertex_allegro_vertex_declaration.get_vertex_declaration();
 
 
   - name: resize
@@ -123,6 +130,34 @@ functions:
       return true;
     
 
+  - name: set_normal_tile
+    type: bool
+    parameters:
+      - name: tile_x
+        type: int
+        default_argument: 0
+      - name: tile_y
+        type: int
+        default_argument: 0
+      - name: tile_index_num
+        type: int
+        default_argument: 0
+    guards: [ initialized, normal_atlas ]
+    body: |
+      if (tile_x < 0) return false;
+      if (tile_x >= num_columns) return false;
+      if (tile_y < 0) return false;
+      if (tile_y >= num_rows) return false;
+
+      normal_tile_ids[tile_x + tile_y * num_columns] = tile_index_num;
+
+      float u1, v1, u2, v2 = 0;
+      if (!normal_atlas->get_tile_uv(tile_index_num, &u1, &v1, &u2, &v2)) return false;
+      if (!set_normal_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false;
+
+      return true;
+    
+
   - name: set_tile_uv
     type: bool
     private: true
@@ -153,6 +188,12 @@ functions:
       if (tile_y >= num_rows) return false;
 
       int id_start = (tile_x * 6) + tile_y * (num_columns*6);
+
+      if (id_start >= vertexes.size())
+      {
+         throw std::runtime_error("MeshWithNormals:set_tile_uv: unexpected assignment error");
+      }
+
       int &i = id_start;
       vertexes[i+0].texture_u = u1;
       vertexes[i+0].texture_v = v1;
@@ -199,6 +240,12 @@ functions:
       if (tile_y >= num_rows) return false;
 
       int id_start = (tile_x * 6) + tile_y * (num_columns*6);
+
+      if (id_start >= vertexes.size())
+      {
+         throw std::runtime_error("MeshWithNormals:set_normal_tile_uv: unexpected assignment error");
+      }
+
       int &i = id_start;
       vertexes[i+0].normal_u = u1;
       vertexes[i+0].normal_v = v1;
@@ -280,6 +327,8 @@ dependencies:
     headers: [ Tileo/Atlas.hpp ]
   - symbol: Tileo::TileoTileVertexAllegroVertexDeclaration
     headers: [ Tileo/TileoTileVertexAllegroVertexDeclaration.hpp ]
+  - symbol: ALLEGRO_VERTEX_DECL*
+    headers: [ allegro5/allegro_primitives.h ]
   - symbol: std::vector<TILEO_TILE_VERTEX>
     headers: [ vector, Tileo/TileoTileVertex.hpp ]
 
