--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -9,11 +9,13 @@ properties:
     type: int
     init_with: 0
     constructor_arg: true
+    getter: true
 
   - name: num_rows
     type: int
     init_with: 0
     constructor_arg: true
+    getter: true
 
   - name: tile_width
     type: float
@@ -97,6 +99,7 @@ functions:
       this->num_rows = num_rows;
 
       clear_and_reserve();
+
       place_vertexes_into_tile_mesh_shape();
 
       return;
@@ -271,7 +274,7 @@ functions:
       int num_vertexes = num_columns*num_rows*6;
       for (int v=0; v<num_vertexes; v+=6)
       {
-         long tile_num = v / 6;
+         int tile_num = v / 6;
          int x1 = (tile_num % num_columns);
          int y1 = (tile_num / num_columns);
          int x2 = x1 + 1;
