* Progress on getting rendering result on MeshWithNormals

--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -66,7 +66,7 @@ functions:
     guards: [ (!initialized), (num_columns >= 0), (num_rows >= 0) ]
     body: |
       tileo_tile_vertex_allegro_vertex_declaration.initialize();
-      clear_and_reserve();
+      resize(num_columns, num_rows);
       initialized = true;
       return;
 
@@ -99,7 +99,6 @@ functions:
       this->num_rows = num_rows;
 
       clear_and_reserve();
-
       place_vertexes_into_tile_mesh_shape();
 
       return;
@@ -128,7 +127,8 @@ functions:
 
       float u1, v1, u2, v2 = 0;
       if (!atlas->get_tile_uv(tile_index_num, &u1, &v1, &u2, &v2)) return false;
-      if (!set_tile_uv(tile_x, tile_y, u1, v1, u2, v2)) return false;
+      if (!set_tile_uv(tile_x, tile_y, u1/320.0, v1/16.0, u2/320.0, v2/16.0)) return false;
+      //if (!set_tile_uv(tile_x, tile_y, 0, 0, 1, 1)) return false; // <- temporary
 
       return true;
     
@@ -190,7 +190,8 @@ functions:
       if (tile_y < 0) return false;
       if (tile_y >= num_rows) return false;
 
-      int id_start = (tile_x * 6) + tile_y * (num_columns*6);
+      int id_start = (tile_x + tile_y * num_columns) * 6;
+      //int id_start = (tile_x * 6) * (tile_y * num_columns);
 
       if (id_start >= vertexes.size())
       {
@@ -271,14 +272,24 @@ functions:
       // TODO: add test
 
       // place the vertexes to create a mesh of boxes for tiles
+      AllegroFlare::Random random(time(0));
       int num_vertexes = num_columns*num_rows*6;
       for (int v=0; v<num_vertexes; v+=6)
       {
+         std::cout << "A";
+         // << std::endl;
          int tile_num = v / 6;
-         int x1 = (tile_num % num_columns);
-         int y1 = (tile_num / num_columns);
-         int x2 = x1 + 1;
-         int y2 = y1 + 1;
+         float x1 = (tile_num % num_columns);
+         float y1 = (tile_num / num_columns);
+         float x2 = x1 + 1;
+         float y2 = y1 + 1;
+
+         //float x1 = random.get_random_float(0, 600); //(); //(tile_num % num_columns);
+         //float y1 = random.get_random_float(0, 600); //(tile_num / num_columns);
+         //float x2 = random.get_random_float(0, 600); //x1 + 1;
+         //float y2 = random.get_random_float(0, 600); //y1 + 1;
+
+         std::cout << "{" << x1 << "," << y1 << ";" << x1 << "," << y1 << "}";
 
          vertexes[v+0].x = x1;
          vertexes[v+0].y = y1;
@@ -294,6 +305,8 @@ functions:
          vertexes[v+5].y = y1;
       }
 
+      std::cout << std::endl;
+
       // "scale" the vertexes to tile_width and tile_height, and set other default values
       for (int v=0; v<num_vertexes; v++)
       {
@@ -304,6 +317,9 @@ functions:
       }
 
       return;
+    body_dependency_symbols:
+      - std::cout
+      - AllegroFlare::Random
 
 
   - name: clear_and_reserve
@@ -334,5 +350,7 @@ dependencies:
     headers: [ allegro5/allegro_primitives.h ]
   - symbol: std::vector<TILEO_TILE_VERTEX>
     headers: [ vector, Tileo/TileoTileVertex.hpp ]
+  - symbol: AllegroFlare::Random
+    headers: [ AllegroFlare/Random.hpp ]
 
 
