--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -84,6 +84,12 @@ functions:
            tmp.g = (tmp.g * inverse_tint_intensity + tint.g * tint_intensity) * tmp.a;
            tmp.b = (tmp.b * inverse_tint_intensity + tint.b * tint_intensity) * tmp.a;
            tmp.a = tmp.a;
+
+           tmp.r = 1.0;
+           tmp.g = 1.0;
+           tmp.b = 0.0;
+           tmp.a = 1.0;
+
            gl_FragColor = tmp;
         }
       )DELIM";
