* Fix rendering issue with MeshWithNormals (was int as arg type rather than float)

--- a/quintessence/Tileo/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/MeshWithNormals.q.yml
@@ -127,8 +127,7 @@ functions:
 
       float u1, v1, u2, v2 = 0;
       if (!atlas->get_tile_uv(tile_index_num, &u1, &v1, &u2, &v2)) return false;
-      if (!set_tile_uv(tile_x, tile_y, u1/320.0, v1/16.0, u2/320.0, v2/16.0)) return false;
-      //if (!set_tile_uv(tile_x, tile_y, 0, 0, 1, 1)) return false; // <- temporary
+      if (!set_tile_uv(tile_x, tile_y, u1/320.0, v1/384.0, u2/320.0, v2/384.0)) return false; // <- TODO: fix this scaling
 
       return true;
     
@@ -176,13 +175,13 @@ functions:
         type: float
         default_argument: 0.0f
       - name: v1
-        type: int
+        type: float
         default_argument: 0.0f
       - name: u2
         type: float
         default_argument: 0.0f
       - name: v2
-        type: int
+        type: float
         default_argument: 0.0f
     body: |
       if (tile_x < 0) return false;
@@ -272,24 +271,14 @@ functions:
       // TODO: add test
 
       // place the vertexes to create a mesh of boxes for tiles
-      AllegroFlare::Random random(time(0));
       int num_vertexes = num_columns*num_rows*6;
       for (int v=0; v<num_vertexes; v+=6)
       {
-         std::cout << "A";
-         // << std::endl;
          int tile_num = v / 6;
          float x1 = (tile_num % num_columns);
          float y1 = (tile_num / num_columns);
          float x2 = x1 + 1;
          float y2 = y1 + 1;
-
-         //float x1 = random.get_random_float(0, 600); //(); //(tile_num % num_columns);
-         //float y1 = random.get_random_float(0, 600); //(tile_num / num_columns);
-         //float x2 = random.get_random_float(0, 600); //x1 + 1;
-         //float y2 = random.get_random_float(0, 600); //y1 + 1;
-
-         std::cout << "{" << x1 << "," << y1 << ";" << x1 << "," << y1 << "}";
 
          vertexes[v+0].x = x1;
          vertexes[v+0].y = y1;
@@ -305,8 +294,6 @@ functions:
          vertexes[v+5].y = y1;
       }
 
-      std::cout << std::endl;
-
       // "scale" the vertexes to tile_width and tile_height, and set other default values
       for (int v=0; v<num_vertexes; v++)
       {
@@ -317,9 +304,6 @@ functions:
       }
 
       return;
-    body_dependency_symbols:
-      - std::cout
-      - AllegroFlare::Random
 
 
   - name: clear_and_reserve
@@ -350,7 +334,5 @@ dependencies:
     headers: [ allegro5/allegro_primitives.h ]
   - symbol: std::vector<TILEO_TILE_VERTEX>
     headers: [ vector, Tileo/TileoTileVertex.hpp ]
-  - symbol: AllegroFlare::Random
-    headers: [ AllegroFlare/Random.hpp ]
 
 
