--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -37,7 +37,7 @@ functions:
         type: ALLEGRO_COLOR
         default_argument: "{}"
     body: |
-      Shader:set_vec3("tint", flat_color.r, flat_color.g, flat_color.b);
+      Shader::set_vec3("tint", flat_color.r, flat_color.g, flat_color.b);
       Shader::set_float("tint_intensity", 1.0);
 
 
