--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -36,9 +36,12 @@ functions:
       - name: flat_color
         type: ALLEGRO_COLOR
         default_argument: "{}"
+      - name: intensity
+        type: float
+        default_argument: 1.0f
     body: |
       Shader::set_vec3("tint", flat_color.r, flat_color.g, flat_color.b);
-      Shader::set_float("tint_intensity", 1.0);
+      Shader::set_float("tint_intensity", intensity);
 
 
   - name: obtain_vertex_source
