* Copy Shaders/AllegroDefault into Shaders/MeshWithNormals

--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -31,19 +31,6 @@ functions:
       Tileo::Shaders::Base::activate();
 
 
-  - name: set_flat_color
-    parameters:
-      - name: flat_color
-        type: ALLEGRO_COLOR
-        default_argument: "{}"
-      - name: intensity
-        type: float
-        default_argument: 1.0f
-    body: |
-      Shader::set_vec3("tint", flat_color.r, flat_color.g, flat_color.b);
-      Shader::set_float("tint_intensity", intensity);
-
-
   - name: obtain_vertex_source
     type: std::string
     static: true
@@ -54,14 +41,20 @@ functions:
         attribute vec4 al_color;
         attribute vec2 al_texcoord;
         uniform mat4 al_projview_matrix;
+        uniform bool al_use_tex_matrix;
+        uniform mat4 al_tex_matrix;
         varying vec4 varying_color;
         varying vec2 varying_texcoord;
-
         void main()
         {
-           varying_color = al_color;
-           varying_texcoord = al_texcoord;
-           gl_Position = al_projview_matrix * al_pos;
+          varying_color = al_color;
+          if (al_use_tex_matrix) {
+            vec4 uv = al_tex_matrix * vec4(al_texcoord, 0, 1);
+            varying_texcoord = vec2(uv.x, uv.y);
+          }
+          else
+            varying_texcoord = al_texcoord;
+          gl_Position = al_projview_matrix * al_pos;
         }
       )DELIM";
       return source;
@@ -73,22 +66,43 @@ functions:
     private: true
     body: |
       static const std::string source = R"DELIM(
+        #ifdef GL_ES
+        precision lowp float;
+        #endif
         uniform sampler2D al_tex;
-        uniform float tint_intensity;
-        uniform vec3 tint;
+        uniform bool al_use_tex;
+        uniform bool al_alpha_test;
+        uniform int al_alpha_func;
+        uniform float al_alpha_test_val;
         varying vec4 varying_color;
         varying vec2 varying_texcoord;
 
+        bool alpha_test_func(float x, int op, float compare);
+
         void main()
         {
-           vec4 tmp = texture2D(al_tex, varying_texcoord);
-           float inverse_tint_intensity = 1.0 - tint_intensity;
-           tmp.r = (tmp.r * inverse_tint_intensity + tint.r * tint_intensity) * tmp.a;
-           tmp.g = (tmp.g * inverse_tint_intensity + tint.g * tint_intensity) * tmp.a;
-           tmp.b = (tmp.b * inverse_tint_intensity + tint.b * tint_intensity) * tmp.a;
-           tmp.a = tmp.a;
+          vec4 c;
+          if (al_use_tex)
+            c = varying_color * texture2D(al_tex, varying_texcoord);
+          else
+            c = varying_color;
+          if (!al_alpha_test || alpha_test_func(c.a, al_alpha_func, al_alpha_test_val))
+            gl_FragColor = c;
+          else
+            discard;
+        }
 
-           gl_FragColor = tmp;
+        bool alpha_test_func(float x, int op, float compare)
+        {
+          if (op == 0) return false;
+          else if (op == 1) return true;
+          else if (op == 2) return x < compare;
+          else if (op == 3) return x == compare;
+          else if (op == 4) return x <= compare;
+          else if (op == 5) return x > compare;
+          else if (op == 6) return x != compare;
+          else if (op == 7) return x >= compare;
+          return false;
         }
       )DELIM";
       return source;
