--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -31,6 +31,19 @@ functions:
       Tileo::Shaders::Base::activate();
 
 
+  - name: set_flat_color
+    parameters:
+      - name: flat_color
+        type: ALLEGRO_COLOR
+        default_argument: "{}"
+      - name: intensity
+        type: float
+        default_argument: 1.0f
+    body: |
+      Shader::set_vec3("tint", flat_color.r, flat_color.g, flat_color.b);
+      Shader::set_float("tint_intensity", intensity);
+
+
   - name: obtain_vertex_source
     type: std::string
     static: true
@@ -76,8 +89,19 @@ functions:
         uniform float al_alpha_test_val;
         varying vec4 varying_color;
         varying vec2 varying_texcoord;
+        uniform float tint_intensity;
+        uniform vec3 tint;
 
         bool alpha_test_func(float x, int op, float compare);
+
+        void alter_by_tint(inout vec4 color)
+        {
+           float inverse_tint_intensity = 1.0 - tint_intensity;
+           color.r = (color.r * inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+           color.g = (color.g * inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+           color.b = (color.b * inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+           color.a = color.a;
+        }
 
         void main()
         {
@@ -87,7 +111,7 @@ functions:
           else
             c = varying_color;
           if (!al_alpha_test || alpha_test_func(c.a, al_alpha_func, al_alpha_test_val))
-            gl_FragColor = c;
+            gl_FragColor = alter_by_tint(c);
           else
             discard;
         }
