* Move shader method down in source

--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -93,15 +93,7 @@ functions:
         uniform vec3 tint;
 
         bool alpha_test_func(float x, int op, float compare);
-
-        void alter_by_tint(inout vec4 color)
-        {
-           float inverse_tint_intensity = 1.0 - tint_intensity;
-           color.r = (color.r * inverse_tint_intensity + tint.r * tint_intensity) * color.a;
-           color.g = (color.g * inverse_tint_intensity + tint.g * tint_intensity) * color.a;
-           color.b = (color.b * inverse_tint_intensity + tint.b * tint_intensity) * color.a;
-           color.a = color.a;
-        }
+        void alter_by_tint(inout vec4 color);
 
         void main()
         {
@@ -128,6 +120,16 @@ functions:
           else if (op == 7) return x >= compare;
           return false;
         }
+
+        void alter_by_tint(inout vec4 color)
+        {
+           float inverse_tint_intensity = 1.0 - tint_intensity;
+           color.r = (color.r * inverse_tint_intensity + tint.r * tint_intensity) * color.a;
+           color.g = (color.g * inverse_tint_intensity + tint.g * tint_intensity) * color.a;
+           color.b = (color.b * inverse_tint_intensity + tint.b * tint_intensity) * color.a;
+           color.a = color.a;
+        }
+
       )DELIM";
       return source;
 
