--- a/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
+++ b/quintessence/Tileo/Shaders/MeshWithNormals.q.yml
@@ -42,6 +42,17 @@ functions:
     body: |
       Shader::set_vec3("tint", flat_color.r, flat_color.g, flat_color.b);
       Shader::set_float("tint_intensity", intensity);
+      return;
+
+
+  - name: set_normal_texture
+    parameters:
+      - name: normal_texture_bitmap
+        type: ALLEGRO_BITMAP*
+        default_argument: nullptr
+    body: |
+      Shader::set_sampler("normal_texture", normal_texture_bitmap, 2);
+      return;
 
 
   - name: obtain_vertex_source
@@ -58,15 +69,27 @@ functions:
         uniform mat4 al_tex_matrix;
         varying vec4 varying_color;
         varying vec2 varying_texcoord;
+
+        // normals logic:
+        //attribute vec2 normal_texcoord; // analagous to al_texcoord
+        //varying vec2 varying_normal_texcoord; // analagous to varying_texcoord
+
         void main()
         {
           varying_color = al_color;
-          if (al_use_tex_matrix) {
+          if (al_use_tex_matrix)
+          {
             vec4 uv = al_tex_matrix * vec4(al_texcoord, 0, 1);
             varying_texcoord = vec2(uv.x, uv.y);
+
+            // normals logic:
+            //vec4 normal_uv = al_tex_matrix * vec4(normal_texcoord, 0, 1);
+            //varying_normal_texcoord = vec2(normal_uv.x, normal_uv.y);
           }
           else
+          {
             varying_texcoord = al_texcoord;
+          }
           gl_Position = al_projview_matrix * al_pos;
         }
       )DELIM";
@@ -92,6 +115,10 @@ functions:
         uniform float tint_intensity;
         uniform vec3 tint;
 
+        // normals logic:
+        uniform sampler2D normal_texture; // analagous to al_tex
+        varying vec2 varying_normal_texcoord; // analagous to varying_texcoord
+
         bool alpha_test_func(float x, int op, float compare);
         void alter_by_tint(inout vec4 color);
 
@@ -100,6 +127,8 @@ functions:
           vec4 c;
           if (al_use_tex)
             c = varying_color * texture2D(al_tex, varying_texcoord);
+            //c = varying_color * texture2D(normal_texture, varying_texcoord);
+            //c = varying_color * texture2D(normal_texture, varying_normal_texcoord);
           else
             c = varying_color;
           if (!al_alpha_test || alpha_test_func(c.a, al_alpha_func, al_alpha_test_val))
@@ -140,6 +169,8 @@ dependencies:
   - symbol: Tileo::Shaders::Base
     headers: [ Tileo/Shaders/Base.hpp ]
   - symbol: ALLEGRO_COLOR
+    headers: [ allegro5/allegro.h ]
+  - symbol: ALLEGRO_BITMAP*
     headers: [ allegro5/allegro.h ]
 
 
